comment .fa class in sidenav fix bug arrow menu in wrong position

--- a/geonode/static/geonode/css/sidenav.css
+++ b/geonode/static/geonode/css/sidenav.css
@@ -93,7 +93,8 @@
 .fa-2x {
 font-size: 2em;
 }
-.fa {
+
+/* .fa {
 position: relative;
 display: table-cell;
 width: 60px;
@@ -101,7 +102,7 @@ height: 36px;
 text-align: center;
 vertical-align: middle;
 font-size:20px;
-}
+} */
 
 
 .main-menu:hover,nav.main-menu.expanded {
